tests/cases/parser/literals/missing_value_in_tuple_lit.stderr
error: expected value assignment after type annotation within named tuple
 --> $DIR/missing_value_in_tuple_lit.hash:5:19
4 |       // ~ERROR: expecting value assignment after type annotation
5 |       t := (name : 1, data := 2)
  |                     ^ 
6 |   }
  = help: expected a `=`
