tests/cases/parser/literals/missing_value_in_tuple_lit.hash
// run=fail, stage=parse

main := () => {
    // ~ERROR: expecting value assignment after type annotation
    t := (name : 1, data := 2)
}
